RE: https://github.com/telecelplay/home/issues/320 - add get_balanceOf